listing all pages

--- a/src/i18n/dutch.json
+++ b/src/i18n/dutch.json
@@ -9,6 +9,9 @@
   "template_added_success_message": "Sjabloon succesvol toegevoegd!",
   "theme_applied_success_message": "Thema succesvol toegepast",
   "page_loaded_success_message": "Pagina succesvol geladen",
+  "page_created": "Pagina succesvol aangemaakt",
+  "page_deleted": "Pagina succesvol verwijderd",
+  "error_while_deleting_page": "Fout tijdens het verwijderen van pagina",
   "no_tile_selected_error_message": "Selecteer een tegel om door te gaan...",
   "error_loading_data_message": "Fout bij het laden van gegevens",
   "failed_to_save_current_page_message": "Het opslaan van de huidige pagina is mislukt",
