--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -9,6 +9,9 @@
   "template_added_success_message": "Template added successfully!",
   "theme_applied_success_message": "Theme applied successfully",
   "page_loaded_success_message": "Page loaded successfully",
+  "page_created": "Page created successfully",
+  "page_deleted": "Page deleted successfully",
+  "error_while_deleting_page": "Error while deleting page",
   "no_tile_selected_error_message": "Select a tile to continue...",
   "error_loading_data_message": "Error loading data",
   "failed_to_save_current_page_message": "Failed to save current page",
