--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -58,5 +58,7 @@
   "error_during_deleting_media": "An error occurred while deleting the media file.",
   "media_deleted_successfully": "Media file deleted successfully.",
   "error_creating_page": "An error occurred while creating the page.",
-  "invalid_file_type_message": "Invalid file type. Please upload a valid image file."
+  "invalid_file_type_message": "Invalid file type. Please upload a valid image file.",
+  
+  "tile-reception": "RECEPTIE"
 }
