create page in modal

--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -34,6 +34,7 @@
   "category_services_or_page": "Service/Product Page",
   "category_predefined_page": "Predefined Page",
   "category_dynamic_form": "Dynamic Form",
+  "category_link": "Web Link",
   "category_call_to_action": "Call to Action",
   "cta_button_exists": "Cta button already exists!",
   "please_select_cta_button": "Please select Cta button",
