--- a/src/i18n/dutch.json
+++ b/src/i18n/dutch.json
@@ -34,6 +34,7 @@
   "category_services_or_page": "Dienst/Productpagina",
   "category_predefined_page": "Vooraf Gedefinieerde Pagina",
   "category_dynamic_form": "Dynamisch Formulier",
+  "category_link": "Web Link",
   "category_call_to_action": "Oproep tot Actie",
   "cta_button_exists": "Cta button al bestaat!",
   "please_select_cta_button": "Selecteer alstublieft de Cta-knop",
