--- a/src/i18n/dutch.json
+++ b/src/i18n/dutch.json
@@ -61,6 +61,7 @@
   "error_creating_page": "Er is een fout opgetreden bij het aanmaken van de pagina.",
   "invalid_file_type_message": "Ongeldig bestandstype. Upload een geldig afbeeldingsbestand.",
   "templates_only_added_to_menu_pages": "Sjablonen kunnen alleen aan menupagina's worden toegevoegd.",
+  "tile_must_have_title_or_icon": "De tegel moet een titel of een icoon hebben.",
 
   "tile-reception": "RECEPTIE",
   "tile-mailbox": "MAILBOX",
