--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -61,6 +61,7 @@
   "error_creating_page": "An error occurred while creating the page.",
   "invalid_file_type_message": "Invalid file type. Please upload a valid image file.",
   "templates_only_added_to_menu_pages": "Templates can only be added to menu pages.",
+  "tile_must_have_title_or_icon": "The tile must have a title or an icon.",
 
   "tile-reception": "RECEPTION",
   "tile-mailbox": "MAILBOX",
