updated ltranslation list

--- a/src/i18n/dutch.json
+++ b/src/i18n/dutch.json
@@ -44,6 +44,9 @@
   "publish_confirm_button": "Publiceren",
   "publish_cancel_button": "Annuleren",
   "enter_title_place_holder": "Voer titel in",
+  "no_cta_message": "Geen call-to-actions gevonden voor deze pagina.",
+  "list_all_pages": "Toon alle pagina's",
+  "hide_pages": "Verberg pagina's",
   "icon_category_services": "Diensten",
   "icon_category_general": "Algemeen",
   "icon_category_health": "Gezondheid",
