--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -44,6 +44,9 @@
   "publish_confirm_button": "Publish",
   "publish_cancel_button": "Cancel",
   "enter_title_place_holder": "Enter title",
+  "no_cta_message": "No Call to actions found for this page.",
+  "list_all_pages": "List all pages",
+  "hide_pages": "Hide pages",
   "icon_category_services": "Services",
   "icon_category_general": "General",
   "icon_category_health": "Health",
